--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -245,9 +245,32 @@
                     src="https://www.youtube.com/embed/iyyDcDQeVmQ?autoplay=1&mute=1&controls=0&loop=1&playlist=iyyDcDQeVmQ"
                     title="YouTube video player" allowfullscreen></iframe>
             </div>
-        </div>
+        </div><!-- //.section1 -->
+
         <!-- section2 -->
-        <div class="section">Section 2</div>
+        <div class="section">
+            <div class="container2">
+                <div class="inner">
+                    <div id="fav_txt">
+                        <h2>
+                            <span>PICK UP</span>
+                            <span>그 이상의 픽업</span>
+                        </h2>
+                        <p>어드벤처의 본질을 담은 디자인</p>
+                        <p>지프의 풍부한 노하우와 오프로드 DNA가 집약되어 탄생한 <br> 아메리카 정통 픽업트럭 글래디에이터가 새롭게 돌아왔습니다. <br> 타의 추종 불허하는 압도적 성능,
+                            내구성, 강력한 견인력 <br> 그리고 지프만 가능한 오픈-에어링 차원이 다른 오리지널 픽업의 매력을 확인해보세요.
+
+
+                        </p>
+                        <a href="#">자세히 보기</a>
+                    </div>
+                    <div id="fav_img">
+                        <div><img src="images/section2/section2_img.png" alt="NEW GLADIATOR"></div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- //.section2 -->
+
         <!-- section3 -->
         <div class="section">
             <div class="section3_container">
@@ -281,13 +304,137 @@
                 </div><!-- //.section3_contents -->
             </div><!-- //.section3_container -->
         </div><!-- .section3 -->
+
         <!-- section4 -->
-        <div class="section">Section 4</div>
+        <div class="section">
+            <div class="section4_container">
+                <div class="section4_title">
+                    <h2>PRESSROOM</h2>
+                </div>
+                <div class="section4_contents">
+                    <div class="section4_press">
+                        <div class="press">
+                            <div class="press_img"><img src="images/section4/section4_1.png" alt="뉴스이미지1"></div>
+                            <div class="press_txt">
+                                <p>가족들과 '특별한 쉼' 제안하는 캠페인</p>
+                            </div>
+                            <div class="press_plus"><a href="#"><i class="fa-solid fa-plus"></i></a></div>
+                        </div>
+                        <div class="press">
+                            <div class="press_img"><img src="images/section4/section4_2.png" alt="뉴스이미지2"></div>
+                            <div class="press_txt">
+                                <p>‘2025 이스터 지프 사파리(2025 EJS)’서
+                                    R콘셉트카 7종 공개</p>
+                            </div>
+                            <div class="press_plus"><a href="#"><i class="fa-solid fa-plus"></i></a></div>
+                        </div>
+                        <div class="press">
+                            <div class="press_img"><img src="images/section4/section4_3.png" alt="뉴스이미지3"></div>
+                            <div class="press_txt">
+                                <p>픽업, 그 이상의 픽업 지프(Jeep®) ‘뉴 글래디에이터’ 국내 공식 출시</p>
+                            </div>
+                            <div class="press_plus"><a href="#"><i class="fa-solid fa-plus"></i></a></div>
+                        </div>
+                    </div>
+                </div><!-- //.section4_contents -->
+            </div><!-- //.section4_container -->
+        </div><!-- //.section4 -->
     </div><!-- //.container -->
 
 
     <!-- footer -->
-    <footer class="footer">Footer Area</footer>
+    <footer class="footer">
+        <div class="footer_logo"><a href="#top">
+                <img src="images/footer/logo_w.png" alt="로고"></div>
+        <div class="footer_line">
+            </a></div>
+        <div class="footer_contents">
+            <p class="footer_txt">Jeep와 함께 모험의 첫걸음을 내딛어 보세요.</p>
+            <div class="footer_box">
+                <div class="footer_search">
+                    <p>SEARCHING JEEP</p>
+                    <input type="text" id="searchInput" class="search_box" placeholder="검색어를 입력해주세요.">
+                    <div class="search_btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
+                <div class="footer_btn">
+                </div>
+            </div>
+            <div class="footer_sitemap_box">
+                <div class="footer_left">
+                    <ul class="footer_sitemap">
+                        <li>모델소개
+                            <ul>
+                                <li><a href="#">NEW GLADIATOR</a></li>
+                                <li><a href="#">RENEGADE</a></li>
+                                <li><a href="#">WRANGLER</a></li>
+                                <li><a href="#">WRANGLER 4XE</a></li>
+                                <li><a href="#">GRAND CHEROKEE</a></li>
+                                <li><a href="#">GRAND CHEROKEE L</a></li>
+                                <li><a href="#">GRAND CHEROKEE 4XE</a></li>
+                            </ul>
+                        </li>
+                        <li>차량
+                            <ul>
+                                <li><a href="#">개요</a></li>
+                                <li><a href="#">에디션</a></li>
+                                <li><a href="#">디자인</a></li>
+                                <li><a href="#">퍼포먼스</a></li>
+                                <li><a href="#">기술</a></li>
+                                <li><a href="#">재원 사양</a></li>
+                                <li><a href="#">3D모델 보기</a></li>
+                            </ul>
+                        </li>
+                        <li>구입문의
+                            <ul>
+                                <li><a href="#">견적요청</a></li>
+                                <li><a href="#">프로모션</a></li>
+                                <li><a href="#">시승신청</a></li>
+                                <li><a href="#">카탈로그</a></li>
+                            </ul>
+                        </li>
+                        <li>고객지원
+                            <ul>
+                                <li><a href="#">연장 보증</a></li>
+                                <li><a href="#">소모품 교환 프로그램</a></li>
+                                <li><a href="#">부품 가격정보</a></li>
+                                <li><a href="#">액세서리 카탈로그</a></li>
+                                <li><a href="#">전기차 배터리 정보</a></li>
+                                <li><a href="#">정비자료</a></li>
+                                <li><a href="#">전자에어장치<br>무선업데이트(OTA)</a></li>
+                                <li><a href="#">교환 환불제도</a></li>
+                                <li><a href="#">전시장/서비스센터 안내</a></li>
+                                <li><a href="#">문의하기</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- //.footer_sitemap_left -->
+                <div class="footer_right">
+                    <a href="#"><img src="images/footer/jeepwave_blogo.png" alt="jeepwave"></a>
+                    <p><a href="#">PRESSROOM</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="footer_info">
+            <div class="finfo_reft">
+                <img src="images/footer/stellantis_blogo.svg" alt="Stellantis">
+                <div>
+                    <p>©2025 Stellantis. All Rights Reserved.</p>
+                    <p>Chrysler, Jeep 및 FIAT 로고는 Stellantis의 등록 상표입니다.</p>
+                </div>
+            </div>
+            <div class="finfo_right">
+                <p><a href="#">법률약관정보</a></p>
+                <p><a href="#">Fine Your Country</a></p>
+                <div>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer><!-- //footer.footer -->
 
 
 </body>
