--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -345,9 +345,8 @@
     <!-- footer -->
     <footer class="footer">
         <div class="footer_logo"><a href="#top">
-                <img src="images/footer/logo_w.png" alt="로고"></div>
-        <div class="footer_line">
-            </a></div>
+                <img src="images/footer/logo_w.png" alt="로고"></a></div>
+        <div class="footer_line"></div>
         <div class="footer_contents">
             <p class="footer_txt">Jeep와 함께 모험의 첫걸음을 내딛어 보세요.</p>
             <div class="footer_box">
