--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/w0310/70_pf/jeep/images/favicon.svg" type="image/svg+xml">
     <title>Jeep</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/w0310/70_pf/jeep/css/reset.css">
+    <link rel="stylesheet" href="/w0310/70_pf/jeep/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -53,10 +53,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="model_purchase">
-                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                    <div><a href="#">시승신청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a>
                                                     </div>
-                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                    <div><a href="#">견적요청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a></div>
                                                 </div>
                                             </div>
@@ -79,10 +79,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="model_purchase">
-                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                    <div><a href="#">시승신청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a>
                                                     </div>
-                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                    <div><a href="#">견적요청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a></div>
                                                 </div>
                                             </div>
@@ -104,10 +104,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="model_purchase">
-                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                    <div><a href="#">시승신청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a>
                                                     </div>
-                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                    <div><a href="#">견적요청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a></div>
                                                 </div>
                                             </div>
@@ -129,10 +129,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="model_purchase">
-                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                    <div><a href="#">시승신청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a>
                                                     </div>
-                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                    <div><a href="#">견적요청<img src="/w0310/70_pf/jeep/images/nav/right.svg"
                                                                 alt="오른쪽화살표버튼"></a></div>
                                                 </div>
                                             </div>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="section3_contents">
                     <div class="section3_new">
-                        <img src="images/section3/vehicles_gladiator.png" alt="">
+                        <img src="/w0310/70_pf/jeep/images/section3/vehicles_gladiator.png" alt="">
                         <h3>NEW GLADIATOR</h3>
                         <p>BEYOND A PICKUP</p>
                     </div>
@@ -290,7 +290,7 @@
                                 <li><a href="#tabs-2">BEST</a></li>
                             </ul>
                             <div class="section3_more">
-                                <a href="#">MORE<img src="images/section3/section3_right.svg" alt="오른쪽화살표"></a>
+                                <a href="#">MORE<img src="/w0310/70_pf/jeep/images/section3/section3_right.svg" alt="오른쪽화살표"></a>
                             </div>
                         </div>
                         <div id="tabs-1">
@@ -314,14 +314,14 @@
                 <div class="section4_contents">
                     <div class="section4_press">
                         <div class="press">
-                            <div class="press_img"><img src="images/section4/section4_1.png" alt="뉴스이미지1"></div>
+                            <div class="press_img"><img src="/w0310/70_pf/jeep/images/section4/section4_1.png" alt="뉴스이미지1"></div>
                             <div class="press_txt">
                                 <p>가족들과 '특별한 쉼' 제안하는 캠페인</p>
                             </div>
                             <div class="press_plus"><a href="#"><i class="fa-solid fa-plus"></i></a></div>
                         </div>
                         <div class="press">
-                            <div class="press_img"><img src="images/section4/section4_2.png" alt="뉴스이미지2"></div>
+                            <div class="press_img"><img src="/w0310/70_pf/jeep/images/section4/section4_2.png" alt="뉴스이미지2"></div>
                             <div class="press_txt">
                                 <p>‘2025 이스터 지프 사파리(2025 EJS)’서
                                     R콘셉트카 7종 공개</p>
@@ -329,7 +329,7 @@
                             <div class="press_plus"><a href="#"><i class="fa-solid fa-plus"></i></a></div>
                         </div>
                         <div class="press">
-                            <div class="press_img"><img src="images/section4/section4_3.png" alt="뉴스이미지3"></div>
+                            <div class="press_img"><img src="/w0310/70_pf/jeep/images/section4/section4_3.png" alt="뉴스이미지3"></div>
                             <div class="press_txt">
                                 <p>픽업, 그 이상의 픽업 지프(Jeep®) ‘뉴 글래디에이터’ 국내 공식 출시</p>
                             </div>
@@ -345,7 +345,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="footer_logo"><a href="#top">
-                <img src="images/footer/logo_w.png" alt="로고"></a></div>
+                <img src="/w0310/70_pf/jeep/images/footer/logo_w.png" alt="로고"></a></div>
         <div class="footer_line"></div>
         <div class="footer_contents">
             <p class="footer_txt">Jeep와 함께 모험의 첫걸음을 내딛어 보세요.</p>
@@ -410,14 +410,14 @@
                     </ul>
                 </div><!-- //.footer_sitemap_left -->
                 <div class="footer_right">
-                    <a href="#"><img src="images/footer/jeepwave_blogo.png" alt="jeepwave"></a>
+                    <a href="#"><img src="/w0310/70_pf/jeep/images/footer/jeepwave_blogo.png" alt="jeepwave"></a>
                     <p><a href="#">PRESSROOM</a></p>
                 </div>
             </div>
         </div>
         <div class="footer_info">
             <div class="finfo_reft">
-                <img src="images/footer/stellantis_blogo.svg" alt="Stellantis">
+                <img src="/w0310/70_pf/jeep/images/footer/stellantis_blogo.svg" alt="Stellantis">
                 <div>
                     <p>©2025 Stellantis. All Rights Reserved.</p>
                     <p>Chrysler, Jeep 및 FIAT 로고는 Stellantis의 등록 상표입니다.</p>
