--- a/70_pf/jeep/fullpage.html
+++ b/70_pf/jeep/fullpage.html
@@ -4,71 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <title>fullpage</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index_fullpage.css">
-    <link rel="stylesheet" href="css/fullpage.css">
+    <link rel="stylesheet" href="./css/fullpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.js"></script>
     <!-- section3 tabs -->
-    <script type="module" src="script/tabs.js"></script>
-    <script src="script/fullpage.js"></script>
+    <script src="./script/fullpage.js"></script>
     <!-- <script src="script/index.js"></script> -->
 
 </head>
 
 <body>
-    <!-- <header class="header">
-        <div class="nav_container">
-            <nav>
-                <div class="nav_bg"></div>
-                <ul class="main">
-                    <li><a href="#">모델소개</a>
-                        <ul class="sub_1">
-                            <li>
-                                <div class="model_1">
-                                    <div class="model_container">
-                                        <div class="img">
-                                            <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="">
-                                        </div>
-                                        <div class="model_txt">
-                                            <div class="model_uptxt"></div>
-                                            <div class="model_downtxt"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="#">구입문의</a></li>
-                    <li>
-                        <div class="logo_container">
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo_w.png" alt="기본 로고"
-                                    class="logo default"></a>
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo.png" alt="호버 로고"
-                                    class="logo hover"></a>
-                        </div>
-                    </li>
-                    <li><a href="#">고객지원</a></li>
-                    <li>
-                        <div class="logo_container_2">
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img
-                                    src="/w0310/70_pf/jeep/images/nav/jeepwave_w.png" alt="기본 로고"
-                                    class="logo2 default"></a>
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img
-                                    src="/w0310/70_pf/jeep/images/nav/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-            <div class="search_container">
-                <img src="/w0310/70_pf/jeep/images/nav/search_w.svg" alt="기본 서치" class="sclogo default">
-                <img src="/w0310/70_pf/jeep/images/nav/search.svg" alt="기본 서치" class="sclogo hover">
-            </div>
-        </div>
-    </header> -->
     <ul id="menu">
         <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Section1</a></li>
         <li data-menuanchor="secondPage"><a href="#secondPage">Section2</a></li>
@@ -91,8 +39,6 @@
         <div class="section">Section 4</div>
         <div class="section fp-auto-height" id="footer">footer</div>
     </div>
-
-
 </body>
 
 </html>
