--- a/70_pf/hana/index.html
+++ b/70_pf/hana/index.html
@@ -11,12 +11,12 @@
 <body>
     <!-- header -->
     <header id="header">
-        <h1 id="logo"><a href="index.html"><b>HT</b> Hanatour</a></h1>
+        <h1 id="logo"><a href="index.html"><b>HT</b>Hanatour</a></h1>
         <nav id="gnb">
             <ul>
-                <li><a href="#product">Product</a></li>
-                <li><a href="#event">Event</a></li>
-                <li><a href="#service">Service</a></li>
+                <li><a href="#sec2">Product</a></li>
+                <li><a href="#sec3">Event</a></li>
+                <li><a href="#sec4">Service</a></li>
             </ul>
         </nav>
     </header>
@@ -74,28 +74,28 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta at dolorem facere laudantium sint libero vero incidunt quae possimus magnam temporibus ex repudiandae, cum debitis dolore quidem magni nihil quaerat.</p>
         <ul>
             <li>
-                <img src="assets/team1.jpg" alt="event1">
+                <div><img src="assets/team1.jpg" alt="event1"></div>
                 <h3>John Doe</h3>
                 <p>CEO & Founder</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure et dolorem reprehenderit itaque laudantium distinctio eaque blanditiis soluta natus? Consectetur.</p>
                 <a href="#">Contact</a>
             </li>
             <li>
-                <img src="assets/team2.jpg" alt="event2">
+                <div><img src="assets/team2.jpg" alt="event2"></div>
                 <h3>John Doe</h3>
                 <p>CEO & Founder</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, officia accusamus? Impedit magnam distinctio deleniti, voluptatibus dolores quis beatae cumque?</p>
                 <a href="#">Contact</a>
             </li>
             <li>
-                <img src="assets/team3.jpg" alt="event3">
+                <div><img src="assets/team3.jpg" alt="event3"></div>
                 <h3>John Doe</h3>
                 <p>CEO & Founder</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. At, labore?</p>
                 <a href="#">Contact</a>
             </li>
             <li>
-                <img src="assets/team4.jpg" alt="event4">
+                <div><img src="assets/team4.jpg" alt="event4"></div>
                 <h3>John Doe</h3>
                 <p>CEO & Founder</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, corrupti! Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, repudiandae.</p>
@@ -120,7 +120,7 @@
     </section><!-- //#service -->
     <!-- footer -->
     <footer id="footer">
-        <p><span>COPYRIGHT</span><span>&copy;</span> 2025 HANATOUR SERVICE INC. <span>ALL RIGHTS RESERVED</span></p>
+        <p><span>COPYRIGHT</span><span> &copy;</span> 2025 HANATOUR SERVICE INC. <span>ALL RIGHTS RESERVED</span></p>
     </footer>
 </body>
 
