--- a/70_pf/mysite2/index.html
+++ b/70_pf/mysite2/index.html
@@ -49,22 +49,59 @@
         </div>
     </div>
     <!-- sec2 -->
-    <div id="sec2" class="container">
-        <h2>ABOUT ME</h2>
+    <div id="sec2" class="container-fluid pt-5">
+        <div class="text-center my-5">
+            <h2>ABOUT ME</h2>
+            <em>Lorem, ipsum dolor.</em>
+        </div>
+        <!-- .sec의 width:920px -->
+        <div class="container sec">
+            <div class="row">
+                <div class="col text-center">
+                    <b>loremd</b>
+                    <div><img id="my_pic" src="images/10001.jpg" alt="내 사진"></div>
+                </div>
+                <p class="col">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eaque fugiat dolorem voluptatem blanditiis officia quia ullam, molestiae quos a eum corrupti consequuntur modi harum optio nostrum cum! Explicabo eligendi sequi autem cupiditate iusto, aperiam impedit reprehenderit enim voluptatum quo delectus non veniam neque fugit. Id voluptas laborum sint, soluta iure ducimus quos adipisci saepe deleniti ex incidunt sapiente, eos natus facilis quae. Libero earum sapiente minus incidunt, ab ad.</p>
+            </div>
+            <p class="text-center mt-5 mb-2">I'm really good at:</p>
+            <div id="skill" class="mb-5 pb-5">
+                <p>SKILL 1</p>
+                <div class="progress mb-2" role="progressbar" aria-label="Success example" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-success" style="width: 75%"></div>
+                </div>
+                <p>SKILL 2</p>
+                <div class="progress mb-2" role="progressbar" aria-label="Success example" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-success" style="width: 95%"></div>
+                </div>
+                <p>SKILL 3</p>
+                <div class="progress mb-2" role="progressbar" aria-label="Success example" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-success" style="width: 70%"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row text-bg-secondary p-5 text-center">
+            <div class="col"><span class="d-block fs-3">4+</span>Completed</div>
+            <div class="col"><span class="d-block fs-3">3+</span>Skillup</div>
+            <div class="col"><span class="d-block fs-3">14+</span>Partners</div>
+            <div class="col"><span class="d-block fs-3">14+</span>Partners</div>
+        </div>
     </div>
-
     <!-- sec3 -->
-    <div id="sec3" class="container">
+    <div id="sec3" class="container sec">
         <h2>PORTPOLIO</h2>
     </div>
 
     <!-- sec4 -->
-    <div id="sec4" class="container">
+    <div id="sec4" class="container sec">
         <h2>CONTACT</h2>
     </div>
     <!-- footer -->
-    
-    
+
+
     <footer></footer>
 </body>
 
