--- a/70_pf/mysite2/index.html
+++ b/70_pf/mysite2/index.html
@@ -91,10 +91,14 @@
         </div>
     </div>
     <!-- sec3 -->
-    <div id="sec3" class="container sec">
-        <h2>PORTPOLIO</h2>
+    <div id="sec3" class="container-fluid text-center py-5">
+        <div class="bg">
+            <h2>PORTPOLIO</h2>
+        </div>
+        <div class="container sec">
+            
+        </div>
     </div>
-
     <!-- sec4 -->
     <div id="sec4" class="container sec">
         <h2>CONTACT</h2>
