--- a/70_pf/mysite3/index.html
+++ b/70_pf/mysite3/index.html
@@ -9,13 +9,13 @@
 	<meta name="description" content="">
 	<!-- SITE TITLE -->
 	<title>GWBC</title>
-
+	<link rel="icon" href="/favicon.png" type="imge/svg+xml">
 	<!-- STYLESHEETS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
 		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="css/templatemo-style.css">
+	<link rel="stylesheet" href="./css/templatemo-style.css">
 	<link href='//fonts.googleapis.com/css?family=Raleway:400,300,600,700' rel='stylesheet' type='text/css'>
 	<!-- 
 
@@ -129,7 +129,7 @@ https://templatemo.com/tm-464-ultra-profile
 							<div class="iso-box-wrapper col4-iso-box">
 								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img1.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img1.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">SRT</h3>
 											<p>기존 SRT 웹사이트를 사용자 경험 개선을 목표로 리뉴얼한 팀 프로젝트입니다. 열차 예약 시스템과 SRT를 이용할 수 있는
@@ -139,7 +139,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box html mobile col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img2.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img2.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">Tylenol</h3>
 											<p>타이레놀 제품을 소개하고 사용방법을 안내를 목표로 리뉴얼한 팀 프로젝트입니다. 반응형으로 제작되어 모바일에서도 약의 정보와 증상에
@@ -149,7 +149,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img3.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img3.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">Jeep</h3>
 											<p>기존 홈페이지보다 더 많은 정보를 제공할 수 있도록 리뉴얼한 홈페이지입니다. Jeep의 역동적인 모습이 홈페이지에서도 보여지도록
@@ -159,7 +159,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box html mobile col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img4.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img4.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">Haribo</h3>
 											<p>하리보 리뉴얼 홈페이지로, 스크롤 모션과 이미지 애니메이션을 통해 하리보의 캐주얼한 이미지가 잘 보이도록 제작합니다.</p>
@@ -168,7 +168,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img5.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img5.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">Lol's burger</h3>
 											<p>햄버거 프랜차이즈 브랜딩 프로젝트입니다. 강아지, 킥보드 키워드로 캐릭터를 디자인하고 홍보 포스터와 햄버거 패키지를 디자인합니다.
@@ -178,7 +178,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img6.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img6.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">Likespace</h3>
 											<p>연습으로 제작한 개인용 백업 홈페이지입니다. 프로크리에이트를 이용하여 대기화면을 그리고 기존에 그린 그림이나 촬영한 사진을
@@ -188,7 +188,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img7.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img7.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">me'er</h3>
 											<p>우울증 인식 개선 프로젝트 [me'er,미러]는 대학교 졸업작품으로, 우울증 인식 단계를 3가지로 나누어 짧은 애니메이션을 제작하여
@@ -198,7 +198,7 @@ https://templatemo.com/tm-464-ultra-profile
 								</div>
 								<div class="iso-box photoshop wordpress col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img8.png" class="fluid-img" alt="portfolio img">
+										<img src="./images/portfolio-img8.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
 											<h3 class="portfolio-item-title">THEDOT</h3>
 											<p>다양한 소재를 이용해 디자인 소품부터 가구까지 제작하고 있는 THEDOT의 제품을 촬영하고 편집하여 상세페이지를 제작합니다.</p>
@@ -355,20 +355,19 @@ https://templatemo.com/tm-464-ultra-profile
 				</div>
 				<div class="col-md-1 col-sm-1"></div>
 				<div class="col-md-12 col-sm-12">
-					<p>Copyright &copy; 2025 KHK. design: <a rel="nofollow noopener"
-							href="https://templatemo.com">template mo</a></p>
+					<p>Copyright All rights reserved.</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- END CONTACT -->
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/jquery.nav.js"></script>
-	<script src="js/isotope.js"></script>
-	<script src="js/imagesloaded.min.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="./script/jquery.js"></script>
+	<script src="./script/bootstrap.min.js"></script>
+	<script src="./script/smoothscroll.js"></script>
+	<script src="./script/jquery.nav.js"></script>
+	<script src="./script/isotope.js"></script>
+	<script src="./script/imagesloaded.min.js"></script>
+	<script src="./script/custom.js"></script>
 </body>
 
 </html>
