--- a/70_pf/mysite3/index.html
+++ b/70_pf/mysite3/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="">
 	<!-- SITE TITLE -->
 	<title>GWBC</title>
-	<link rel="icon" href="/favicon.png" type="imge/svg+xml">
+	<link rel="icon" href="./favicon.png" type="imge/svg+xml">
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -244,8 +244,8 @@ https://templatemo.com/tm-464-ultra-profile
 					</div>
 					<h4 class="tm-progress-label">Javascript <small class="progress-percent-small">50%</small></h4>
 					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50"
-							aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
+							aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
 					</div>
 					<h4 class="tm-progress-label">Photoshop <small class="progress-percent-small">90%</small></h4>
 					<div class="progress tm-progress">
@@ -254,8 +254,8 @@ https://templatemo.com/tm-464-ultra-profile
 					</div>
 					<h4 class="tm-progress-label">illustrator <small class="progress-percent-small">80%</small></h4>
 					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90"
+							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 					</div>
 				</div>
 			</div>
@@ -355,7 +355,7 @@ https://templatemo.com/tm-464-ultra-profile
 				</div>
 				<div class="col-md-1 col-sm-1"></div>
 				<div class="col-md-12 col-sm-12">
-					<p>Copyright All rights reserved.</p>
+					<p>Copyright KHK. All rights reserved.</p>
 				</div>
 			</div>
 		</div>
