--- a/06_jq/37_패밀리사이트.html
+++ b/06_jq/37_패밀리사이트.html
@@ -150,6 +150,9 @@
                 event.preventDefault();
                 // 이벤트 전파 방지
                 event.stopPropagation();
+                
+                //return false;
+                // event.stopPropagation();를 지우면 작동되지않음
             });
 
 
