--- a/70_pf/tylenol/sec1.html
+++ b/70_pf/tylenol/sec1.html
@@ -6,15 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sec1</title>
     <link rel="stylesheet" href="./css/sec1.css">
+    <script src="./script/sec1.js"></script>
 </head>
 
 <body>
     <section id="sec1">
-        <h2 class="font_1">Quick &</h2>
-        <h2 class="font_2">15 Min</h2>
-        <h3 class="font_3">즉시 녹아 15분 만에 빠르게</h3>
-        <h3 class="font_4">#타이레놀정500mg</h3>
+        <div class="sec1_slider">
+            <div class="sec1_container_1">
+                <div>
+                    <div class="img_1"><img src="./images/main1.png" alt="타이레놀1"></div>
+                    <!-- <div class="img_2"><img src="./images/star.svg" alt="별"></div> -->
+                    <h2 class="font_1">Quick &</h2>
+                    <h2 class="font_2">15 Min</h2>
+                    <h3 class="font_3">즉시 녹아 15분 만에 빠르게</h3>
+                    <h3 class="font_4">#타이레놀정500mg</h3>
+                </div>
+            </div>
+            <div class="sec1_container_2">
+                <div>
+                    <h2 class="font_1">Long &</h2>
+                    <h2 class="font_2">8 Hours</h2>
+                    <h3 class="font_3">근육통에 8시간 내내</h3>
+                    <h3 class="font_4">#타이레놀이알서방정</h3>
+                </div>
+            </div>
+            <div class="sec1_container_3">
+                <div>
+                    <h2 class="font_1">6 Colds</h2>
+                    <h2 class="font_2">& 1 Pill</h2>
+                    <h3 class="font_3">6가지 감기 증상, 한 알로</h3>
+                    <h3 class="font_4">#타이레놀콜드에스정</h3>
+                </div>
+            </div>
+        </div>
     </section>
+
 </body>
 
 </html>
